[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/wave_designer/node_designer/nodes/generators/ramp_node.gd" type="Script" id=1]
[ext_resource path="res://ui/widgets/slider_slot.tscn" type="PackedScene" id=3]

[node name="Ramp" type="GraphNode"]
margin_right = 181.0
margin_bottom = 59.0
title = "NODE_RAMP_TITLE"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color( 1, 1, 1, 1 )
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
base_title = "NODE_RAMP_TITLE"

[node name="Output" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 245.0
margin_bottom = 38.0
hint_tooltip = "NODE_OUTPUT_PORT_TTIP"
mouse_filter = 1
text = "NODE_OUTPUT_PORT"
align = 2

[node name="From" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 39.0
margin_right = 245.0
margin_bottom = 53.0
label = "NODE_RAMP_FROM_PORT"
tooltip = "NODE_RAMP_FROM_PORT_TTIP"
clamp_lo = false
clamp_hi = false
nullable = false

[node name="To" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 54.0
margin_right = 245.0
margin_bottom = 68.0
label = "NODE_RAMP_TO_PORT"
tooltip = "NODE_RAMP_TO_PORT_TTIP"
clamp_lo = false
clamp_hi = false
nullable = false

[node name="Curve" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 69.0
margin_right = 245.0
margin_bottom = 83.0
label = "NODE_CURVE_PORT"
tooltip = "NODE_CURVE_PORT_TTIP"
clamp_lo = false
clamp_hi = false
nullable = false

[node name="RangeFrom" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 84.0
margin_right = 245.0
margin_bottom = 98.0
type = 7
label = "NODE_RANGE_FROM_PORT"
tooltip = "NODE_RANGE_FROM_PORT_TTIP"
nullable = false

[node name="RangeLength" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 99.0
margin_right = 245.0
margin_bottom = 113.0
type = 8
label = "NODE_RANGE_LEN_PORT"
tooltip = "NODE_RANGE_LEN_PORT_TTIP"
min_value = 0.0
value = 1.0
nullable = false

[connection signal="value_changed" from="From" to="." method="_on_From_value_changed"]
[connection signal="value_changed" from="To" to="." method="_on_To_value_changed"]
[connection signal="value_changed" from="Curve" to="." method="_on_Curve_value_changed"]
[connection signal="value_changed" from="RangeFrom" to="." method="_on_RangeFrom_value_changed"]
[connection signal="value_changed" from="RangeLength" to="." method="_on_RangeLength_value_changed"]
